--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^0.1.1",
     "classnames": "^2.3.2",
     "next": "12.3.1",
     "react": "18.2.0",
