--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/analytics": "^0.1.1",
     "classnames": "^2.3.2",
     "next": "12.3.1",
+    "nextjs-google-analytics": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.55.0",
