--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/analytics": "^0.1.1",
     "classnames": "^2.3.2",
+    "framer-motion": "^7.6.7",
     "next": "12.3.1",
     "nextjs-google-analytics": "^2.1.0",
     "react": "18.2.0",
