chore: run prettier on all files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,5 @@
   "color-highlight.markerType": "background",
   "color-highlight.markRuler": false,
   "todo-tree.general.showActivityBarBadge": true,
-  "todo-tree.filtering.excludeGlobs": [
-    "**/node_modules"
-  ]
+  "todo-tree.filtering.excludeGlobs": ["**/node_modules"]
 }
