--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,38 +1,45 @@
 {
-  "name": "App",
+  "name": "Flumq Landing Page",
+  "short_name": "Flumq",
+  "description": "Flumq is a service that helps people move abroad",
+  "start_url": "http://localhost:3000",
+  "theme_color": "white",
+  "background_color": "white",
+  "orientation": "portrait",
+  "display": "minimal-ui",
   "icons": [
     {
-      "src": "/android-icon-36x36.png",
+      "src": "/favicon/android/android-icon-36x36.png",
       "sizes": "36x36",
       "type": "image/png",
       "density": "0.75"
     },
     {
-      "src": "/android-icon-48x48.png",
+      "src": "/favicon/android/android-icon-48x48.png",
       "sizes": "48x48",
       "type": "image/png",
       "density": "1.0"
     },
     {
-      "src": "/android-icon-72x72.png",
+      "src": "/favicon/android/android-icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png",
       "density": "1.5"
     },
     {
-      "src": "/android-icon-96x96.png",
+      "src": "/favicon/android/android-icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png",
       "density": "2.0"
     },
     {
-      "src": "/android-icon-144x144.png",
+      "src": "/favicon/android/android-icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png",
       "density": "3.0"
     },
     {
-      "src": "/android-icon-192x192.png",
+      "src": "/favicon/android/android-icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "density": "4.0"
