--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "serve-storybook": "serve storybook-static"
+    "serve-storybook": "serve storybook-static",
+    "chromatic": "npx chromatic"
   },
   "dependencies": {
     "@vercel/analytics": "^0.1.1",
@@ -39,9 +40,12 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "babel-loader": "^8.3.0",
+    "chromatic": "^6.11.4",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "storybook-addon-next": "^1.7.1",
     "typescript": "4.8.4"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "flumq-landing-page@0.1.0"
 }
